# BetterBetterSchoology

./: .gitignore  tailwind.config.js
bbs-shared/: Cargo.toml
bbs-shared/src/: cache.rs  data.rs  errors.rs  events.rs  lib.rs  reducer_actions.rs  state.rs
frontend/: Cargo.toml  index.html  package.json
frontend/public/: glue.js  main.css
frontend/src/: breadcrumbs.rs  lib.rs  login.rs  main.rs
frontend/src/breadcrumbs/: mod.rs
frontend/src/class_page/: mod.rs
frontend/src/login/: mod.rs
frontend/src/main_page/: mod.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs  requests.rs  structs.rs
