[package]
name = "bbs-shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
bincode = "1.3.3"
lazy_static = "1.4.0"
regex = "1.5.5"
serde = { version = "1.0.137", features = ["rc"] }
yew = "0.19.3"
