[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
js-sys = "0.3.57"
wasm-bindgen = "0.2.80"
wasm-bindgen-futures = "0.4.30"
web-sys = "0.3.57"
yew = "0.19.3"

bbs-shared = { path = "../bbs-shared" }
base64 = "0.13.0"
lazy_static = "1.4.0"
regex = "1.5.5"
const_format = "0.2.23"
