[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc.6", features = [] }

[dependencies]
scraper = "0.13.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-rc.7", features = ["dialog-all"] }

bbs-shared = { path = "../bbs-shared" }
bincode = "1.3.3"
base64 = "0.13.0"
reqwest = { version = "0.11.10", features = ["cookies"] }
derive-getters = "0.2.0"
crossbeam = "0.8.1"
keyring = "1.1.2"
reqwest_cookie_store = "0.3.0"
cookie_store = "0.16.0"
url = "2.2.2"
lazy_static = "1.4.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
